
<resources>
    <string name="app_name">KeepAccount</string>
    <string name="home_page">首頁</string>
    <string name="sell">Sell</string>
    <string name="quantity">色碼</string>
    <string name="ymd_req">年/月/日<font color='#FF0000'>*</font></string>

    <string name="quantity_req">色碼<font color='#FF0000'>*</font></string>
    <string name="item_name_req">支出項目<font color='#FF0000'>*</font></string>
    <string name="item_price_req">花費金額<font color='#FF0000'>*</font></string>
    <string name="save_action">確定</string>
    <string name="choose_date">選日</string>
    <string name="choose_action">選項目</string>
    <string name="item_detail_fragment_title">項目細節</string>
    <string name="event_title">支出項目</string>
    <string name="add_fragment_title">新增項目</string>
    <string name="edit_fragment_title">編輯項目</string>
    <string name="bar_fragment_title">載具設定</string>
    <string name="limit_fragment_title">預算設定</string>
    <string name="color_show">目前顏色</string>
    <string name="color_price_show">金額/顏色</string>
    <string name="pie">圓餅圖</string>
    <string name="strip">長條圖</string>
    <string name="price">花費金額</string>
    <string name="Date">日期</string>
    <string name="item">支出項目</string>
    <string name="delete">刪除</string>
    <string name="delete_question">確定要刪除此項目?</string>
    <string name="no">取消</string>
    <string name="yes">確定</string>
    <string name="i_know">知道了</string>
    <string name="go_to_setting">前往設定</string>
    <string name="jump_to_nav_event_list_fragment">請至項目管理頁,新增或修改支出項目</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_fragment_title">新增消費</string>
    <string name="visual_fragment_title">圖表報告</string>
    <string name="event_fragment_title">項目管理</string>
    <string name="barcode_fragment_title">條碼載具</string>
    <string name="budget_fragment_title">額度管理</string>
    <string name="event_detail_fragment_title">項目資訊</string>
    <string name="adjust_brightness">調整螢幕亮度</string>
    <string name="invoice_carrier">發票載具</string>
    <string name="rank_n">第N名</string>
    <string name="name">名子</string>
    <string name="money">錢</string>
    <string name="monthly_budget">每月預算</string>
    <string name="confirm">確定</string>
    <string name="enter_budget_hint">輸入預算<font color='#FF0000'>*</font></string>
    <string name="enter_barcode_hint">輸入載具編碼<font color='#FF0000' /></string>
    <string name="empty_fields">尚有空白欄位</string>
    <string name="choose_color_title">選擇顏色</string>
    <string name="enter_string">輸入字串</string>
    <string name="saved">已保存</string>
    <string name="not_entered">未輸入</string>
    <string name="month_total_cost">%1$s月總花費</string>
    <string name="cost_with_unit">%1$s元</string>
    <string name="budget_with_unit">%1$s元</string>
    <string name="remaining_balance">剩餘 %1$s元</string>
    <string name="overspending">超支 %1$s元</string>
    <string name="this_month_cost">本月花費: %1$s</string>
    <string name="no_budget_toast">尚未輸入本月預算</string>
    <string name="enter_number_toast">請輸入數字</string>
    <string name="remaining_days">距離下個月還有%1$s天</string>
    <string name="today_consumption_status">今日消費狀況</string>
    <string name="monthly_consumption_status">本月消費狀況</string>
    <string name="today_total_cost">本日花費: %1$s</string>
    <string name="dscend">金額由高到低</string>
    <string name="ascend">金額由低到高</string>
    <string name="inital">預設排序</string>
    <string name="barcode_and_invoice_fragment_title">載具/對獎</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lottery_check">發票對獎</string>
    <string name="network_type_wifi">WiFi</string>
    <string name="network_type_mobile">Mobile</string>
    <string name="network_type_no_network">請檢察網路連線狀態\n若因為網路問題導致中獎號碼無法存取\n請連上網後,下拉更新</string>
    <string name="hint_enter_numbers">請輸入發票後三碼</string>
    <string name="hint_check_numbers">請核對獎號</string>
    <string name="congrats">恭喜中獎🎉 趕緊核對!</string>
    <string name="hint_sorry_try_again">沒中 , 再接再厲 😅</string>
    <string name="topic">後三碼對獎</string>
    <string name="first_prize_bonus">必須8碼全中\n才可得獎金 %1$s 萬</string>
    <string name="loading_text">正在載入最新一期中獎號碼…</string>
    <string name="first_prize">頭獎</string>
    <string name="special_prize">特別獎</string>
    <string name="grand_prize">特獎</string>
    <string name="eight_digits_required">需八碼全中</string>
    <string name="prize_comparison_table">獎金對照表</string>
    <string name="last_3_digits">末 3 碼</string>
    <string name="prize_200">200 元</string>
    <string name="last_4_digits">末 4 碼</string>
    <string name="prize_1000">1,000 元</string>
    <string name="last_5_digits">末 5 碼</string>
    <string name="prize_4000">4,000 元</string>
    <string name="last_6_digits">末 6 碼</string>
    <string name="prize_10000">1萬 元</string>
    <string name="last_7_digits">末 7 碼</string>
    <string name="prize_40000">4萬 元</string>
    <string name="count_invoice">共%1$s張</string>
    <string name="export_to_excel">匯出當月開銷Excel表</string>
    <string name="export_picture">下載年度花費圖表</string>
    <string name="screen_shot_and_share">📸 截圖並分享</string>
    <string name="screen_shot">📸 截圖</string>
    <string name="share">分享</string>
    <string name="text_gone">隱藏金額</string>
    <string name="text_show">顯示金額</string>
    <string name="manual_check">手動對獎</string>
    <string name="qr_code_scan">QR Code 掃描</string>
    <string name="scan_next">掃描下一張</string>
    <string name="year_spending">年度花費總覽</string>


</resources>