<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_list"
        android:title="@string/list_fragment_title"
        android:icon="@drawable/outline_calendar_month_24"
         />
    <item
        android:id="@+id/nav_report"
        android:title="@string/visual_fragment_title"
        android:icon="@drawable/baseline_pie_chart_24"
        />
    <item
        android:id="@+id/nav_event"
        android:title="@string/event_fragment_title"
        android:icon="@drawable/baseline_view_headline_24"/>
    <item
        android:id="@+id/nav_barcode"
        android:title="@string/barcode_fragment_title"
        android:icon="@drawable/baseline_document_scanner_24"
        />
    <item
        android:id="@+id/nav_budget"
        android:title="@string/budget_fragment_title"
        android:icon="@drawable/baseline_attach_money_24"/>

</menu>
