<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ItemListFragment">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Divider 讓畫面清楚分隔 -->
    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 2️⃣ Header 四欄，放在 CalendarView 下面 -->

    <TextView
        android:id="@+id/item_date"
        style="@style/Widget.Inventory.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_name"
        style="@style/Widget.Inventory.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/item_date"
        app:layout_constraintEnd_toStartOf="@+id/item_quantity" />

    <TextView
        android:id="@+id/item_quantity"
        style="@style/Widget.Inventory.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/item_name"
        app:layout_constraintEnd_toStartOf="@+id/item_colorshow" />

    <TextView
        android:id="@+id/item_colorshow"
        style="@style/Widget.Inventory.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/color_price_show"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/item_quantity"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/item_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <!-- ⚠️ 注意：這裡改成 Bottom_toBottomOf parent -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:src="@drawable/baseline_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
